# libds

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  DigitalStage.cbp  LICENSE  README.md  conanfile-ix.py  conanfile.py  conanfile.txt
.github/workflows/: cmake.yml  test.yml  ubuntu.yml  using-cpprestsdk.yml  using-ixwebsocket.yml  windows.yml
cmake/: BrewResolver.cmake  Config.cmake.in  FetchAndPatchSigslot.cmake  FixAppleArchitecture.cmake  signal.hpp.patch
include/DigitalStage/: Types.h
include/DigitalStage/Api/: Client.h  Events.h  Macros.h  Store.h
include/DigitalStage/Audio/: AudioMixer.h  AudioMixer.hpp  AudioMixer.tpp
include/DigitalStage/Auth/: AuthError.h  AuthService.h
include/ds/: AuthService.h  Client.h  Events.h  Store.h
src/: AuthService.cc  AuthService_cpprestsdk.cc  Client.cc  Client.h  Events.cc  Events.h  Macros.h  Store.cc  Store.h  Store2.cc  Store2.h  Types.h  cli.cc  ov_client_digitalstage.cc  ov_client_digitalstage.h
test/: CMakeLists.txt  ClientAsyncLiveTest.cpp  ClientAsyncTest.cpp  ClientLiveTest.cpp  ClientMessageHandlerTest.cpp  ClientTest.cpp  TeckosClientConnectionTest.cpp  TeckosClientTest.cpp  test1.cc
